--- a/front/src/app/components/header/header.component.html
+++ b/front/src/app/components/header/header.component.html
@@ -13,11 +13,11 @@
             Cátalogo
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink='/home'>Comics</a></li>
-            <li><a class="dropdown-item" routerLink='/home'>Educación</a></li>
-            <li><a class="dropdown-item" routerLink='/home'>Historia</a></li>
-            <li><a class="dropdown-item" routerLink='/home'>Juvenil</a></li>
-            <li><a class="dropdown-item" routerLink='/home'>Programación</a></li>
+            <li><a class="dropdown-item" routerLink='/comics'>Comics</a></li>
+            <li><a class="dropdown-item" routerLink='/education'>Educación</a></li>
+            <li><a class="dropdown-item" routerLink='/history'>Historia</a></li>
+            <li><a class="dropdown-item" routerLink='/juvenil'>Juvenil</a></li>
+            <li><a class="dropdown-item" routerLink='/programacion'>Programación</a></li>
           </ul>
         </li>
       </ul>
@@ -39,7 +39,7 @@
           </ul>
         </div>
       </ng-template>
-      <div class="dropdown">
+      <!---<div class="dropdown">
         <a class="btn btn-primary dropdown-toggle"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Mi cuenta
         </a>
@@ -49,7 +49,7 @@
           <li><a class="dropdown-item" routerLink='/home'>Cambiar contraseña</a></li>
           <li><a class="dropdown-item" (click)="cerrarSesion()">Cerrar Sesión</a></li>
         </ul>
-      </div>
+      </div>--->
     </div>
   </div>
 </nav>
