--- a/front/src/app/components/carrito/carrito.component.html
+++ b/front/src/app/components/carrito/carrito.component.html
@@ -1,1 +1,82 @@
-<p>carrito works!</p>
+<div id="contents" role="main" class="main-page  col-lg-12 col-md-12 col-sm-12 col-xs-12" bis_skin_checked="1">
+    <div class="post-9 page type-page status-publish hentry" bis_skin_checked="1">
+<div class="entry-content" bis_skin_checked="1">
+<div class="entry-summary" bis_skin_checked="1">
+    <div class="woocommerce" bis_skin_checked="1"><div class="woocommerce-notices-wrapper" bis_skin_checked="1"></div>
+<form class="woocommerce-cart-form" action="" method="post">
+
+<table class="shop_table shop_table_responsive cart woocommerce-cart-form__contents" cellspacing="0">
+<thead>
+<tr>
+<th class="product-remove">&nbsp;</th>
+<th class="product-thumbnail">&nbsp;</th>
+<th class="product-name">Producto</th>
+<th class="product-price">Precio</th>
+<th class="product-quantity">Cantidad</th>
+<th class="product-total">Total</th>
+</tr>
+</thead>
+<tbody>
+
+        <tr class="woocommerce-cart-form__cart-item cart_item">
+
+<td class="product-remove">
+    <a href="" class="remove" aria-label="Borrar este artículo" data-product_id="6804" data-product_sku="">×</a></td>
+
+<td class="product-thumbnail">
+<a href=""><img loading="lazy" decoding="async" width="300" height="300" src="https://tiendateatral.com/9147-large_default/libro-the-simpsons-songbook.jpg" class="attachment-woocommerce_thumbnail size-woocommerce_thumbnail" alt="" srcset="https://tiendateatral.com/9147-large_default/libro-the-simpsons-songbook-300x300.jpg 300w, https://tiendateatral.com/9147-large_default/libro-the-simpsons-songbook-150x150.jpg 150w, https://tiendateatral.com/9147-large_default/libro-the-simpsons-songbook-80x80.jpg 80w" sizes="(max-width: 300px) 100vw, 300px"></a>						</td>
+
+<td class="product-name" data-title="Producto">
+<a href="">NOMBRE LIBRO</a>						</td>
+
+<td class="product-price" data-title="Precio">
+    <span class="woocommerce-Price-amount amount" data-original="<bdi><span class=&quot;woocommerce-Price-currencySymbol&quot;>$</span>20,000</bdi>" data-price="20000" title="Original price:20000">PRECIO LIBRO</span>						</td>
+
+<td class="product-quantity" data-title="Cantidad">
+<input type="number" id="quantity_65544af897d5b" class="input-text qty text" step="1" min="0" max="" name="cart[a322852ce0df73e204b7e67cbbef0d0a][qty]" value="1" title="Cantidad" size="4" placeholder="" inputmode="numeric">
+    </td>
+
+<td class="product-total" data-title="Total">
+    <span class="woocommerce-Price-amount amount" data-original="<bdi><span class=&quot;woocommerce-Price-currencySymbol&quot;>$</span>20,000</bdi>" data-price="20000" title="Original price:20000">PRECIO TOTAL</span>						</td>
+</tr>
+
+
+
+
+</tbody>
+</table>
+</form>
+
+
+<div class="cart-collaterals" bis_skin_checked="1">
+<div class="products-wrapper" bis_skin_checked="1"><div class="cart_totals " bis_skin_checked="1">
+
+
+<h2>Total del carrito</h2>
+
+<table cellspacing="0" class="shop_table shop_table_responsive">
+
+
+<tr class="order-total">
+<th>Total</th>
+<td data-title="Total"><strong><span class="woocommerce-Price-amount amount" data-original="<bdi><span class=&quot;woocommerce-Price-currencySymbol&quot;>$</span>20,000</bdi>" data-price="20000" title="Original price:20000">VALOR TOTAL</span></strong> </td>
+</tr>
+
+</table>
+
+<div class="wc-proceed-to-checkout" bis_skin_checked="1">
+
+<a href="" class="checkout-button button alt wc-forward">
+Finalizar compra</a>
+</div>
+
+
+</div>
+</div></div>
+
+</div>
+                            </div>
+</div>
+<div class="clearfix" bis_skin_checked="1"></div>
+    </div>
+</div>
