--- a/front/src/app/components/comics/comics.component.html
+++ b/front/src/app/components/comics/comics.component.html
@@ -22,8 +22,8 @@
           <p>{{dato.characters.items[4] ? '- '+dato.characters.items[4].name : ""}}</p>
           <h5>Número de paginas: </h5>
           <p>{{dato.pageCount ? dato.pageCount : ""}}</p>
-        </div>
-        <button type="button" (click)="addCarro()" >Agregar</button>
+        </div><br>
+        <button class="btn btn-primary" type="button" (click)="addCarro()" >Agregar</button>
       </div>
     </div>
   </div>
