--- a/front/src/app/components/programacion/programacion.component.css
+++ b/front/src/app/components/programacion/programacion.component.css
@@ -27,6 +27,12 @@ text-align: start;
   height: 100%;
   pointer-events: none;
 }
+
+button{
+  margin-left: 30%;
+  text-align: center;
+}
+
 h3{
   margin: 20px;
   text-align: center;
