--- a/front/src/app/components/catalogo/catalogo.component.html
+++ b/front/src/app/components/catalogo/catalogo.component.html
@@ -1,4 +1,6 @@
 <div class="container ">
+   <!-----<img src=" assets/img/libros.jpg" class="card_imagen"/>-->
+
   <div class="card mx-4 mt-4 ">
     <div class="card-body" routerLink="/comics">
       <h5 class="card-title">Catálogo de Comics</h5><br>
