--- a/front/src/app/components/header2/header2.component.html
+++ b/front/src/app/components/header2/header2.component.html
@@ -12,7 +12,7 @@
         </button>
       </form>
     </div>
-      <span class="navbar-brand me-5" routerLink='/home'>
+      <span class="navbar-brand me-5" routerLink='/catalogo'>
         <img class="rounded" src="assets/img/Logo1.png" alt="Logo" width="80%" height="50%"/>
       </span>
   <div class="carrito">
