--- a/front/src/app/components/header/header.component.html
+++ b/front/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <button type="button" class="btn btn-dark" routerLink='/home' aria-current="page" >Inicio</button>
+          <button type="button" class="btn btn-dark" routerLink='/catalogo' aria-current="page" >Inicio</button>
         </li>
         <li class="nav-item dropdown">
           <button type="button" class="btn btn-dark" routerLink='/catalogo'>Catálogo</button>
