--- a/front/src/app/components/juvenil/juvenil.component.html
+++ b/front/src/app/components/juvenil/juvenil.component.html
@@ -17,7 +17,7 @@
           <h5>Publicado por: </h5>
           <p>{{dato.fechaPublicacion ? dato.fechaPublicacion : ""}} en {{dato.publisher_date}}</p>
         </div><br>
-        <button class="btn btn-primary" type="button" (click)="addCarro()" >Agregar</button>
+        <button class="btn btn-primary" type="button" (click)="addCarro(dato.idLibro)" >Agregar</button>
       </div>
     </div>
   </div>
