--- a/front/src/app/components/pago/pago.component.css
+++ b/front/src/app/components/pago/pago.component.css
@@ -3,7 +3,7 @@
   transition: 0.3s;
   border-radius: 10px; /* 5px rounded corners */
   width: 100vh;
-  height: 85vh;
+  height: 100%;
 }
 
 button{
@@ -34,3 +34,9 @@ button{
   display: flex;
   justify-content: center;
 }
+.card_imagen {
+  margin: 10px;
+  width: 40%;
+  height: 40%;
+}
+
